[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainSystem.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_right = 40.5
margin_bottom = 14.0
text = "Dialog Editor"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 414.0
margin_bottom = 14.0
text = "Dialog Text"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 414.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 414.0
margin_bottom = 60.0
custom_constants/separation = 120

[node name="labelConvoID" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 14.0
text = "Convo ID"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/labelConvoID"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 24.0

[node name="labelLayerID" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 231.0
margin_bottom = 14.0
text = "Layer ID"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/labelLayerID"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 24.0

[node name="labelBranchID" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 351.0
margin_right = 414.0
margin_bottom = 14.0
text = "Branch ID"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/labelBranchID"]
margin_top = 20.0
margin_right = 58.0
margin_bottom = 24.0

[node name="saveButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.5
margin_top = 250.0
margin_right = 49.5
margin_bottom = 20.0
text = "Commit Entry"
